# csc299-project

FinalTask/: Summary.MD  Video.txt
FinalTask/src/final task/: __init__.py  task_manager.py
FinalTask/tests/: test_creating_task.py  test_delete_task.py
Tasks2/: README.md  task_manager.py
Tasks2/data/: knowledge.json
conversations/: 01-pre-assignment.md  02-first-prototype.md  03-updating-prototype.md  04-second-prototype.md  05-tasks2-updated-model  06-Final-Task-Conversations.md  README.md
prototypes/: protoType1.py
prototypes/data/: knowledge.json  player.json  quests.json
tasks1/: README.md  quest_log.py
tasks1/data/: player.json  quests.json
tasks3/: pyproject.toml
tasks3/src/tasks3/: task_manager.py
tasks3/tests/: test_completing_task.py
tasks4/: README.md  main.py  pyproject.toml  task4_openai.py
tasks5/: Conversations
tasks5/specs/1-task-manager/: spec.md
tasks5/specs/1-task-manager/checklists/: requirements.md
tasks5/task-manager/: pyproject.toml
tasks5/task-manager/.specify/memory/: constitution.md
tasks5/task-manager/app/: cli.py  models.py  storage.py
tasks5/task-manager/tests/: test_storage.py
