[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = "Minimal CLI task manager with JSON persistence"
authors = ["Dev <dev@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.scripts]
taskmgr = "app.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
